--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server"
   },
   "keywords": [],
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {
     "jest": "^29.7.0",
-    "mysql": "^2.18.1",
     "supertest": "^7.0.0"
   }
 }
